refactor: JdbcTemplate 예외 레벨 지정 개선